1.8.12
------

1.8.11
------
(RB=152040)
moved transportClient, degrader and many other cluster properties to service properties (part 1)
Push the config producing code first then push the config consuming part later.

(RB=152100)
bump to 1.8.11

1.8.10
------
Add detection of wrong assocKey in RestRequestBuilderGenerator.
Add display of assocKeys of finder in restli-docgen.

(RB=144421)
Added RoutingAwareClient to facilitate service name lookup from a routeKey

(RB=151086)
bump to 1.8.10

1.8.9
-----
(RB=149304)
Added ScatterGather support for BatchUpdates and BatchDeletes.
Made a backwards incompatible change to ScatterGatherBuilder.RequestInfo constructor; it now
accepts a BatchRequest instead of Request.

(RB=150347)
bump to 1.8.9

1.8.8
-----
(RB=144188)
Added jmx methods to query trackerClient and number of hashpoint.

(RB=149202)
Add dataModel build script and use in restli-common to publish EmptyRecord
and other core restli schemas so they can be referenced by other projects.

(RB=149393)
fix for ZKConnection/DefaultWatcher race condition

1.8.7
-----
(RB=146100)
Performance optimization for construction of query params to avoid 
needlessly appending the array index as a string for each field in 
a list only to remove it later.

(RB=146833)
Deprecate AbstractValidator default (no-arg) constructor. See class
comments for context.

(RB=146839)
Potential fix for Avro Schema Translator transient problem where
some embedded/contained schemas are not being translated.

1.8.6
-----
(RB=139285)
Fix up RestLiServiceException.toString() and update ErrorResponse
schema to correctly reflect optional fields.

(RB=141420)
Add ColoVariants to D2Config

1.8.5
-----
(RB=138254)
Add pdsc file and validator for EmptyRecord.

(RB=138178)
Workaround bug in ScheduledThreadPoolExecutor that caused
delays when calling HttpClientFactory.shutdown().

(RB=139799)
Order subresources when restspec.json is exported. This avoids massive changes in restspec.json when